--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+    font-family: 'Montserrat', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background-color: #151718;
+}
+
+.gradient {
+    background: linear-gradient(90.69deg, #EE91AA 1.73%, #B326B2 25.09%, #6E118C 50.6%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.btn-gradient {
+    background: linear-gradient(180deg, #EE91AA 0%, #B326B2 36.77%, #6E118C 100%);
+    border-radius: 10px;
+}
+
+.url_input{
+    @apply block rounded-md border border-gray-200 bg-transparent border-none focus:border-none focus:outline-none 
 }
